move home assistant config to repo

--- a/apps/home-assistant/deployment.yaml
+++ b/apps/home-assistant/deployment.yaml
@@ -30,7 +30,7 @@ spec:
               name: config
             - mountPath: /config/configuration.yaml
               subPath: configuration.yaml
-              name: configuration.yaml
+              name: configuration-yaml
           securityContext:
             privileged: true
             capabilities:
@@ -44,4 +44,4 @@ spec:
             claimName: home-assistant-config
         - name: configuration.yaml
           configMap:
-            name: configuration.yaml
+            name: configuration-yaml
