move home assistant automations to repo

--- a/apps/home-assistant/deployment.yaml
+++ b/apps/home-assistant/deployment.yaml
@@ -31,6 +31,9 @@ spec:
             - mountPath: /config/configuration.yaml
               subPath: configuration.yaml
               name: configuration-yaml
+            - mountPath: /config/automations.yaml
+              subPath: automations.yaml
+              name: automations-yaml
           securityContext:
             privileged: true
             capabilities:
@@ -45,3 +48,6 @@ spec:
         - name: configuration-yaml
           configMap:
             name: configuration-yaml
+        - name: automations-yaml
+          configMap:
+            name: automations-yaml
