--- a/apps/home-assistant/kustomization.yaml
+++ b/apps/home-assistant/kustomization.yaml
@@ -12,3 +12,7 @@ configMapGenerator:
     namespace: home-assistant
     files:
       - configuration.yaml=config/configuration.yaml
+  - name: automations-yaml
+    namespace: home-assistant
+    files:
+      - automations.yaml=config/automations.yaml
