--- a/apps/leantime/repository.yaml
+++ b/apps/leantime/repository.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: leantime
 spec:
   interval: 12h
-  url: https://github.com/Leantime/leantime
+  url: https://raw.githubusercontent.com/Leantime/leantime/master/helm
