--- a/apps/leantime/repository.yaml
+++ b/apps/leantime/repository.yaml
@@ -1,8 +1,10 @@
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+kind: GitRepository
 metadata:
   name: leantime
   namespace: leantime
 spec:
   interval: 12h
-  url: https://raw.githubusercontent.com/Leantime/leantime/master/helm
+  url: https://github.com/Leantime/leantime
+  ref:
+    branch: master
