--- a/apps/leantime/leantime-values.yaml
+++ b/apps/leantime/leantime-values.yaml
@@ -1,33 +1,58 @@
 #file: noinspection SpellCheckingInspection
 image:
-  tag: "3.4.7"
-
+    tag: 3.4.7
 persistence:
-  storageClass: "manual"
-
+    storageClass: manual
 app:
-  leanSessionSecure: "false"
-  defaultTimezone: "Europe/Warsaw"
-  session:
-    password: "3bdbhem7xxs4nqk79m6g"
-
+    leanSessionSecure: "false"
+    defaultTimezone: Europe/Warsaw
+    session:
+        password: ENC[AES256_GCM,data:6N7SvfrZHUB03WM1Sm9hf0clCUiP,iv:4cPHLwnDZ2CA5FlrnpPobFkym+4izjjL4qFigj9RIBo=,tag:vL6Jk0OrlmGOw2UEMC9uYw==,type:str]
 mariadb:
-  auth:
-    rootPassword: "dhct8cjb4ftv9n9899dv"
-    password: "h1dzs3y82w6bnfezrzhr"
-
+    auth:
+        rootPassword: ENC[AES256_GCM,data:uC5sWRKhWqT23fQSFt7KxdNVxJho,iv:/g/NgEKolrxNdlwq8CsuTyswpSn9i8sgGhoK6FZvDPk=,tag:Ppj5Zp3VQ4ecTAVKHbRprA==,type:str]
+        password: ENC[AES256_GCM,data:yVNsLuncfR75pdhtTsWOcPEJU/4o,iv:HL7EBMX1f1ADyiGXC10+ozxcHRicNxCYbonIsaWjUGQ=,tag:7De/a/iUvU74M6QhAn7ijw==,type:str]
+    global:
+        defaultStorageClass: manual
+    primary:
+        persistence:
+            selector:
+                matchLabels:
+                    app.kubernetes.io/name: leantime
+                    app: leantime
+                    sub: maria
 ingress:
-  enabled: true
-  className: traefik
-  annotations:
-    external-dns.alpha.kubernetes.io/target: 192.168.8.222
-    traefik.ingress.kubernetes.io/router.entrypoints: local
-  hosts:
-    - host: leantime.local.boomerok.dev
-      paths:
-        - path: /
-          pathType: Prefix
-  tls:
-    - secretName: local-tls
-      hosts:
-        - leantime.local.boomerok.dev
+    enabled: true
+    className: traefik
+    annotations:
+        external-dns.alpha.kubernetes.io/target: 192.168.8.222
+        traefik.ingress.kubernetes.io/router.entrypoints: local
+    hosts:
+        - host: leantime.local.boomerok.dev
+          paths:
+            - path: /
+              pathType: Prefix
+    tls:
+        - secretName: ENC[AES256_GCM,data:O9glWlImy3uI,iv:5tQO1H8UM7vxgFttlY23Izu7x4nbr+fIoB3EDuI3vfM=,tag:SxNughpKtF3nOiHeKgTWXw==,type:str]
+          hosts:
+            - leantime.local.boomerok.dev
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age10x7hgktrgv969cs8pzdfwdtrdz5lap0zyq78ts2yex68afrkvd3qsnk62k
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZTWExTjVhSFhINVU3V01w
+            WlZhRHh4Mkl3OTMweUkwYmZmc0xFMUJDYXlFCmhGWjZsd2pCWmdxWUhhUloxcHpP
+            WTF3Uy9jNVcwZWlNd1NkZ2FWZDBIbEkKLS0tIEtDMEIvN1padC94N2FvMlEzOUNi
+            eHhud1R0RkEvSFZmSlFZUmQvd1pXK1UK/A7pqvjTjD4w6VOE3IfFszCy7RWHwoPd
+            6KY+ava3yr+9+u9dKdnAjGbqQnfjNcBfUl2zYe5wcbJ0zfCbUvLotg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-03-29T21:43:14Z"
+    mac: ENC[AES256_GCM,data:qL1CyqFxqZRt3+RDdr0oaGYUfOiVqkCMYdmj2Sw+LgsJoBQLJchC5h8sNDXjSc6n6/iuYHdhWOyb0Bz3Nni26Ox2PNg8eaOSfOrGkCvLVG3JblCl6YxtSmcVnNAz823Gm4KHeiXkIlKsApfhm6+mGz/oGpNodgpBtg0TGQYyLsM=,iv:7SxQloAiaW1CLtTFEYRfAgbRWHkHKaOV5PZR3VNXDOk=,tag:Ft5WZxi8VjabC2yrfHrs2w==,type:str]
+    pgp: []
+    encrypted_regex: (^(id|crt|key|screen_id)$|token|secret|[Pp]assword|api[-_.]?key)
+    version: 3.9.4
