--- a/apps/leantime/leantime-values.yaml
+++ b/apps/leantime/leantime-values.yaml
@@ -1,48 +1,28 @@
 #file: noinspection SpellCheckingInspection
 image:
-    tag: 3.4.7
+  tag: 3.4.7
 persistence:
-    storageClass: ""
+  storageClass: ""
 app:
-    leanSessionSecure: "false"
-    defaultTimezone: Europe/Warsaw
-    session:
-        password: ENC[AES256_GCM,data:6N7SvfrZHUB03WM1Sm9hf0clCUiP,iv:4cPHLwnDZ2CA5FlrnpPobFkym+4izjjL4qFigj9RIBo=,tag:vL6Jk0OrlmGOw2UEMC9uYw==,type:str]
+  leanSessionSecure: "false"
+  defaultTimezone: Europe/Warsaw
+  session:
+    password: f3cm5szsqwre2c4raueqz
 mariadb:
-    auth:
-        existingSecret: leantime-secrets
+  auth:
+    existingSecret: leantime-secrets
 ingress:
-    enabled: true
-    className: traefik
-    annotations:
-        external-dns.alpha.kubernetes.io/target: 192.168.8.222
-        traefik.ingress.kubernetes.io/router.entrypoints: local
-    hosts:
-        - host: leantime.local.boomerok.dev
-          paths:
-            - path: /
-              pathType: Prefix
-    tls:
-        - secretName: ENC[AES256_GCM,data:O9glWlImy3uI,iv:5tQO1H8UM7vxgFttlY23Izu7x4nbr+fIoB3EDuI3vfM=,tag:SxNughpKtF3nOiHeKgTWXw==,type:str]
-          hosts:
-            - leantime.local.boomerok.dev
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age10x7hgktrgv969cs8pzdfwdtrdz5lap0zyq78ts2yex68afrkvd3qsnk62k
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZTWExTjVhSFhINVU3V01w
-            WlZhRHh4Mkl3OTMweUkwYmZmc0xFMUJDYXlFCmhGWjZsd2pCWmdxWUhhUloxcHpP
-            WTF3Uy9jNVcwZWlNd1NkZ2FWZDBIbEkKLS0tIEtDMEIvN1padC94N2FvMlEzOUNi
-            eHhud1R0RkEvSFZmSlFZUmQvd1pXK1UK/A7pqvjTjD4w6VOE3IfFszCy7RWHwoPd
-            6KY+ava3yr+9+u9dKdnAjGbqQnfjNcBfUl2zYe5wcbJ0zfCbUvLotg==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-30T19:19:01Z"
-    mac: ENC[AES256_GCM,data:iP9EQsuxHqkMszyANjMOcGAGwU5H/bBYSfttfUxLUBu4y3ig62KtaNp2UoIl08HhrJIXPAe46xYO5l8mQesSBQeAsQvqx0lfBu9PamrsKRj1DE7SR3t6e6swFI5oZOelGR3/jiCPApFA1Ybd60Yz0h27AIloShWYcvWvkJGwwFM=,iv:E5HKgV90rhz1ZDZcdqgwqSSTwS+c3tUHC4yZ6/MlHck=,tag:8RKZ7jDEMemnScVzJrP8FA==,type:str]
-    pgp: []
-    encrypted_regex: (^(id|crt|key|screen_id)$|token|secret|[Pp]assword|api[-_.]?key)
-    version: 3.9.4
+  enabled: true
+  className: traefik
+  annotations:
+    external-dns.alpha.kubernetes.io/target: 192.168.8.222
+    traefik.ingress.kubernetes.io/router.entrypoints: local
+  hosts:
+    - host: leantime.local.boomerok.dev
+      paths:
+        - path: /
+          pathType: Prefix
+  tls:
+    - secretName: local-tls
+      hosts:
+        - leantime.local.boomerok.dev
