--- a/apps/leantime/leantime-values.yaml
+++ b/apps/leantime/leantime-values.yaml
@@ -2,7 +2,7 @@
 image:
   tag: 3.4.7
 persistence:
-  storageClass: ""
+  storageClass: "manual"
 app:
   leanSessionSecure: "false"
   defaultTimezone: Europe/Warsaw
