--- a/infra/controllers/network/external-dns/unifi-values.yaml
+++ b/infra/controllers/network/external-dns/unifi-values.yaml
@@ -17,13 +17,13 @@ provider:
     livenessProbe:
       httpGet:
         path: /healthz
-        port: 8080
+        port: "8080"
       initialDelaySeconds: 10
       timeoutSeconds: 10
     readinessProbe:
       httpGet:
         path: /readyz
-        port: 8080
+        port: "8080"
       initialDelaySeconds: 10
       timeoutSeconds: 10
 
