--- a/infra/controllers/network/external-dns/unifi-values.yaml
+++ b/infra/controllers/network/external-dns/unifi-values.yaml
@@ -2,8 +2,8 @@ provider:
   name: webhook
   webhook:
     image:
-      repository: ghcr.io/kashalls/external-dns-unifi-webhook
-      tag: v0.4.1
+      repository: "ghcr.io/kashalls/external-dns-unifi-webhook"
+      tag: "v0.4.1"
     env:
       - name: UNIFI_HOST
         value: https://192.168.1.1
